fix: table overflow small device, ColumnsText hasTable, list bullet

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -181,6 +181,11 @@ p {
 table {
   text-align: left;
   border-collapse: collapse;
+  // width: 100%;
+
+  @include breakpoint(desktopSm) {
+    min-width: unset;
+  }
 
   tr {
     th {
@@ -188,9 +193,8 @@ table {
       padding: px(17) px(20) px(20);
       background-color: $light-grey;
       color: $dark-grey;
-      white-space: nowrap;
 
-      @include media-tablet {
+      @include media-desktopSm {
         padding: px(30) px(20);
       }
     }
@@ -202,8 +206,41 @@ table {
       border: 1px solid $light-grey;
       vertical-align: top;
 
-      @include media-tablet {
+      @include media-desktopSm {
         padding: px(28) px(20) px(20) px(24);
+      }
+
+      &:first-child {
+        width: 25%;
+        min-width: px(140);
+      }
+
+      &:nth-child(2) {
+        width: 35%;
+        min-width: px(300);
+      }
+
+      &:nth-child(3) {
+        width: 30%;
+        min-width: px(290);
+      }
+
+      @include breakpoint(tablet) {
+        &:first-child {
+          min-width: px(168);
+        }
+
+        &:nth-child(2) {
+          min-width: px(384);
+        }
+      }
+
+      @include breakpoint(desktopSm) {
+        &:first-child,
+        &:nth-child(2),
+        &:nth-child(3) {
+          min-width: unset;
+        }
       }
 
       ul {
